# FindMyFiles

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/chunker/: chunker.py  recursive_chunker.py  test_chunker.py
backend/filestore/: __init__.py  filestore.py  local_filestore.py
backend/ingestors/: ingestor.py  text_ingestor.py
backend/vector_store/: local_vec_store.py  vector_store.py
tests/: test.txt  test_local_chromadb.py  test_local_filestore.py  test_text_chunker.py  test_text_ingestor.py
